Add Provider ID to MediaSinks discovered in browser

Set the provider ID for Cast/Dial sinks discovered in browser, so that it's not UNKNOWN.
We will remove UNKNOWN as the default argument for the ctor param in a separate patch to avoid bugs like this.

Bug: 792586
Change-Id: Ia43a3e451908f8a8e3c902b7869196f2ff6a7b2a
Reviewed-on: https://chromium-review.googlesource.com/811666
Reviewed-by: Derek Cheng <imcheng@chromium.org>
Commit-Queue: Takumi Fujimoto <takumif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522194}
Former-commit-id: e9ef5260cdea70b3f1aabf1bf19ee1985d01c236